# learning-web-gpu-programming

./: Cargo.toml  README.md  build.rs  docker-compose.yml
src/: camera.rs  lib.rs  main.rs  model.rs  resources.rs  shader-instances.wgsl  shader-texture.wgsl  shader.wgsl  texture.rs
storage/: enums.rs
