[package]
name = "gpu-programming"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bytemuck = { version="1.23.2", features=["derive"] }
env_logger = "0.11.8"
image = { version="0.25.6", default-features=false, features=["png","jpeg"] }
log = "0.4.27"
pollster = "0.4.0"
wgpu = "25.0"
winit = { version="0.30.12", features = ["android-native-activity"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "25.0", features = ["webgl"]}
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
strip = true

[profile.dev]
incremental = true

[lib]
crate-type = ["cdylib","rlib"]

[[bin]]
name = "gpu-programming"
path = "src/main.rs"
